# profile-evaluator-rs

./: .gitignore  Cargo.toml  README.md  assetProfiles.adoc
output/: blocks_indicators_report.json  blocks_indicators_report.yml  camera_indicators_report.json  camera_indicators_report.yml  expression_indicators_report.json  expression_indicators_report.yml  genai_indicators_report.json  genai_indicators_report.yml  includes_indicators_report.json  includes_indicators_report.yml  no_manifests_indicators_report.json  no_manifests_indicators_report.yml  signature_indicators_report.json  signature_indicators_report.yml
scripts/: build-wasm.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
testfiles/: blocks_indicators.json  blocks_profile.yml  camera_indicators.json  camera_profile.yml  expression_indicators.json  expression_profile.yml  genai_profile.yml  includeMe.yml  includes_profile.yml  no_manifests_indicators.json  no_manifests_profile.yml  order-tests.yml  orders.json  signature_indicators.json  signature_profile.yml
tests/: samples.rs
ui/: app.js  index.html  styles.css
