[package]
name = "profile_evaluator_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "profile_evaluator_rs"
path = "src/lib.rs"

[[bin]]
name = "profile-evaluator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
handlebars = "6.3.2"
json-formula-rs = { path = "../json-formula-rs" }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
